Bug 390176 - File/backup give mount/unmount error, even if "mount" is not checked
Summary: File/backup give mount/unmount error, even if "mount" is not checked
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: file (other bugs)
Version First Reported In: 5.0.0
Platform: Gentoo Packages Linux
: NOR normal
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
: 391357 (view as bug list)
Depends on:
Blocks:
 
Reported: 2018-02-09 20:52 UTC by Jack
Modified: 2018-03-04 22:10 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.0.1
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Jack 2018-02-09 20:52:04 UTC
File/Backup defaults to /mnt/floppy, which I suppose is because I dodn't move my configuration data from .kde4 to the new location.  However, even after changing this to ~/KMYFiles (where I keep the backups) and confirming that the "mount" checkbox is NOT ticked, I get two popup errors "Error mounting" and "Error unmounting" and the backup does not happen.  While the errors are only an annoyance, it is more important that I now have to remember to do the backups manually until this is fixed.
Comment 1 Thomas Baumgart 2018-02-13 19:41:44 UTC
Git commit 448617493f68d4981384b1a85161233d4a16f87f by Thomas Baumgart.
Committed on 13/02/2018 at 19:41.
Pushed by tbaumgart into branch '5.0'.

Fix backup feature

The backup feature was broken after some recent refactoring action
FIXED-IN: 5.0.1

M  +2    -2    kmymoney/dialogs/kbackupdlg.cpp
M  +1    -1    kmymoney/dialogs/kbackupdlg.h
M  +1    -1    kmymoney/kmymoney.cpp

https://commits.kde.org/kmymoney/448617493f68d4981384b1a85161233d4a16f87f
Comment 2 Thomas Baumgart 2018-03-04 12:39:54 UTC
*** Bug 391357 has been marked as a duplicate of this bug. ***
Comment 3 Mark Hunter 2018-03-04 21:44:08 UTC
When is 6.0.1 coming out?  Seems like there are many bugs that are to be fixed with this release.
Comment 4 Mark Hunter 2018-03-04 21:44:40 UTC
Sorry 5.0.1.
Comment 5 Jack 2018-03-04 22:10:18 UTC
Mark - 5.0.1 will be released as soon as the developers can reasonably do so - hopefully in a few weeks at most.  Many of the developers had been using 5.0 in production for a while - it just turns out there are plenty of specific areas and features they do not use frequently enough to have avoided the bugs and regressions.  NOBODY is happy with them, but repeatedly pointing out the problem is not going to get it resolved any faster.  The developers do see all the bug reports and comments.