Fix backup feature

The backup feature was broken after some recent refactoring action

BUG: 390176
FIXED-IN: 5.0.1